WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100523
[Qt] MiniBrowser segfaults on exit after using WebGL.
https://bugs.webkit.org/show_bug.cgi?id=100523
Summary
[Qt] MiniBrowser segfaults on exit after using WebGL.
Zeno Albisser
Reported
2012-10-26 07:47:36 PDT
In GraphicsSurfaceGLX the display connection must not be closed before destroying the offscreen window.
Attachments
patch for review.
(5.14 KB, patch)
2012-10-26 07:49 PDT
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2012-10-26 07:49:09 PDT
Created
attachment 170927
[details]
patch for review.
Kenneth Rohde Christiansen
Comment 2
2012-10-26 07:51:35 PDT
Comment on
attachment 170927
[details]
patch for review. View in context:
https://bugs.webkit.org/attachment.cgi?id=170927&action=review
> Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:61 > + Window getXWindow()
OffscreenXWindow? it actually feels more like a create method
Zeno Albisser
Comment 3
2012-10-26 07:59:47 PDT
Comment on
attachment 170927
[details]
patch for review. View in context:
https://bugs.webkit.org/attachment.cgi?id=170927&action=review
>> Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:61 >> + Window getXWindow() > > OffscreenXWindow? it actually feels more like a create method
I was thinking about how to name these things properly as well. It is a create method, but only for a single instance. So it feels more like a get to me. (implicit creation) OffScreenRootWindow::getOffscreenXWindow() somehow feels very redundant as well, doesn't it?
Kenneth Rohde Christiansen
Comment 4
2012-10-26 08:07:19 PDT
Comment on
attachment 170927
[details]
patch for review. View in context:
https://bugs.webkit.org/attachment.cgi?id=170927&action=review
>>> Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:61 >>> + Window getXWindow() >> >> OffscreenXWindow? it actually feels more like a create method > > I was thinking about how to name these things properly as well. > It is a create method, but only for a single instance. So it feels more like a get to me. (implicit creation) > OffScreenRootWindow::getOffscreenXWindow() somehow feels very redundant as well, doesn't it?
You are right. It is fine!
Zeno Albisser
Comment 5
2012-10-26 10:19:40 PDT
Comment on
attachment 170927
[details]
patch for review. Clearing flags on attachment: 170927 Committed
r132671
: <
http://trac.webkit.org/changeset/132671
>
Zeno Albisser
Comment 6
2012-10-26 10:19:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug