[Qt] MiniBrowser segfaults on exit after using WebGL. https://bugs.webkit.org/show_bug.cgi?id=100523

The display connection must not be closed before
destroying the offscreen window.
Therefore opening the connection is moved to the
getXWindow() function. And closing the connection
is being moved to the destructor of the offscreen window.

Reviewed by Kenneth Rohde Christiansen.

* platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:
(WebCore::OffScreenRootWindow::OffScreenRootWindow):
(WebCore::OffScreenRootWindow::getXWindow):
(OffScreenRootWindow):
(WebCore::OffScreenRootWindow::display):
(WebCore::OffScreenRootWindow::~OffScreenRootWindow):
(WebCore):
(WebCore::GraphicsSurfacePrivate::GraphicsSurfacePrivate):
(WebCore::GraphicsSurfacePrivate::~GraphicsSurfacePrivate):
(WebCore::GraphicsSurfacePrivate::createSurface):

Canonical link: https://commits.webkit.org/118580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132671 268f45cc-cd09-0410-ab3c-d52691b4dbfc